k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-simpcore1-dev
  labels:
    tenant: opsera
    app: simpcore1
    environment: dev
    managed-by: opsera-c2c
